--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ orbs:
 jobs:
     build:
         docker:
-            - image: eclipse-temurin:21-jdk
+            - image: cimg/openjdk:21.0
         environment:
           MAVEN_CLI_OPTS: "--batch-mode"
         steps:
