--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
                 destination: target                
     test:
         docker:
-            - image: maven:3.8.1-openjdk-17-slim
+            - image: cimg/openjdk:21.0
         steps:
             - checkout
             - run: mvn test -e
