--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,16 @@
             <version>8.0.1</version>
             <type>pom</type>
         </dependency>
+        
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
+
 
 
         <dependency>
