--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,18 @@
 server.port=8082
 
+# PostgreSQL Konfiguration
+spring.datasource.url=jdbc:postgresql://dpg-d0mbe2re5dus738cbml0-a.frankfurt-postgres.render.com/anwesenheitsapp
+spring.datasource.username=anwesenheitsapp_user
+spring.datasource.password=QNjuBe27w8B1FnVkJzl5QqiP4nf4XcP7
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA Einstellungen
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Optional: Logging (f\u00fcr SQL-Ausgabe)
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
 
