--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,8 @@ spring.jpa.properties.hibernate.format_sql=true
 # Optional: Logging (f\u00fcr SQL-Ausgabe)
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+debug=true
+server.error.whitelabel.enabled=false
+
 
 
