--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <properties>
         <java.version>21</java.version>
         <vaadin.version>24.7.1</vaadin.version>
+        <vaadin.productionMode>true</vaadin.productionMode>
     </properties>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -90,6 +91,35 @@
                     <mainClass>net.mci.seii.group3.Application</mainClass>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>com.vaadin</groupId>
+                <artifactId>vaadin-maven-plugin</artifactId>
+                <version>24.7.1</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-frontend</goal>
+                            <goal>build-frontend</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.13.0</version>
+                <configuration>
+                    <release>${java.version}</release>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
+    <profiles>
+        <profile>
+            <id>production</id>
+            <properties>
+                <vaadin.productionMode>true</vaadin.productionMode>
+            </properties>
+        </profile>
+    </profiles>
 </project>
